Refactor Live duration section in container-h.html
Updated the layout of the Live duration section by moving and modifying rows for better organization.

--- a/container-h.html
+++ b/container-h.html
@@ -185,32 +185,28 @@ body{
       <!-- COLONNA 1: header + 1 row -->
       <div class="col">
         <div class="header">Aumenta la durata della Live!</div>
-        <div class="row">
-          <div class="label">Follow</div>
-          <div class="desc">+1 minuto di Live</div>
-        </div>
       </div>
 
       <!-- COLONNA 2: 2 row -->
       <div class="col">
         <div class="row">
-          <div class="label">ogni 1€ donato</div>
-          <div class="desc"><i>+1 minuto di Live</i></div>
+          <div class="label">Follow</div>
+          <div class="desc">+1 minuto di Live</div>
         </div>
         <div class="row">
-          <div class="label">ogni 100 Bit</div>
-          <div class="desc">+2 minuti di Live</div>
+          <div class="label">ogni 1€ donato</div>
+          <div class="desc"><i>+1 minuto di Live</i></div>
         </div>
       </div>
 
       <!-- COLONNA 3: 2 row -->
       <div class="col">
         <div class="row">
-          <div class="label">Sub</div>
-          <div class="desc"><i>+5 minuti di Live</i></div>
+          <div class="label">ogni 100 Bit</div>
+          <div class="desc">+2 minuti di Live</div>
         </div>
         <div class="row">
-          <div class="label">Prime</div>
+          <div class="label">Sub/Prima</div>
           <div class="desc"><i>+5 minuti di Live</i></div>
         </div>
       </div>
