Change labels to uppercase and adjust grid gap
Updated text labels to uppercase for consistency and reduced gap between grid items.

--- a/container-h.html
+++ b/container-h.html
@@ -64,7 +64,7 @@ body{
   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
 
   /* ↓ spazi ridotti tra colonne/box */
-  gap:8px;
+  gap:4px;
 
   align-items:stretch;
 }
@@ -184,17 +184,17 @@ body{
 
       <!-- COLONNA 1: header + 1 row -->
       <div class="col">
-        <div class="header">Aumenta la durata della Live!</div>
+        <div class="header">AUMENTA LA DURATA DELLA LIVE!</div>
       </div>
 
       <!-- COLONNA 2: 2 row -->
       <div class="col">
         <div class="row">
-          <div class="label">Follow</div>
+          <div class="label">FOLLOW</div>
           <div class="desc">+1 minuto di Live</div>
         </div>
         <div class="row">
-          <div class="label">ogni 1€ donato</div>
+          <div class="label">OGNI 1€ DONATO</div>
           <div class="desc"><i>+1 minuto di Live</i></div>
         </div>
       </div>
@@ -202,11 +202,11 @@ body{
       <!-- COLONNA 3: 2 row -->
       <div class="col">
         <div class="row">
-          <div class="label">ogni 100 Bit</div>
+          <div class="label">OGNI 100 BIT</div>
           <div class="desc">+2 minuti di Live</div>
         </div>
         <div class="row">
-          <div class="label">Sub/Prima</div>
+          <div class="label">SUB/PRIME</div>
           <div class="desc"><i>+5 minuti di Live</i></div>
         </div>
       </div>
